using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace slotlib.Enums
{
    public enum ShiftType
    {
        Dagvagt,
        Aftenvagt,
        Nattevagt
    }
}
