using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace slotlib.Models
{
    public class Department
    {
        private int _id;
        public int Id { get; set; }

        private string title;
        public string Title { get; set; }
    }
}
