using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace slotlib.Models
{
    public class OverlapSchedule
    {
        private int _id;
        public int Id { get; set; }

        private DateTime _date;
        public DateTime Date { get; set; }
    }
}
