using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace slotlib.Models
{
    public class PhoneAssignment
    {
        private int _id;
        public int Id { get; set; }

        private int _phoneNumber;
        public int PhoneNumber { get; set; }
    }
}
