using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace slotlib.Models
{
    public class Reminder
    {
        private int _id;
        public int Id { get; set; }

        private string _title;
        public string Title { get; set; }
    }
}
